@@ -280,9 +280,11 @@ end
 --- @param result vim.lsp.CompletionResult Result of `textDocument/completion`
 --- @param prefix string prefix to filter the completion items
 --- @param client_id integer? Client ID
+--- @param handle_preselect boolean? Handle preselect item
 --- @return table[]
+--- @return table?
 --- @see complete-items
-function M._lsp_to_complete_items(result, prefix, client_id)
+function M._lsp_to_complete_items(result, prefix, client_id, handle_preselect)
   local items = get_items(result)
   if vim.tbl_isempty(items) then
     return {}
@@ -314,6 +316,7 @@ function M._lsp_to_complete_items(result, prefix, client_id)
   local bufnr = api.nvim_get_current_buf()
   local user_convert = vim.tbl_get(buf_handles, bufnr, 'convert')
   local user_cmp = vim.tbl_get(buf_handles, bufnr, 'cmp')
+  local preselect_item = nil --- @type table?
   for _, item in ipairs(items) do
     if matches(item) then
       local word = get_completion_word(item, prefix, match_item_by_value)
@@ -346,7 +349,11 @@ function M._lsp_to_complete_items(result, prefix, client_id)
       if user_convert then
         completion_item = vim.tbl_extend('keep', user_convert(item), completion_item)
       end
-      table.insert(candidates, completion_item)
+      if item.preselect and handle_preselect and not preselect_item then
+        preselect_item = completion_item
+      else
+        table.insert(candidates, completion_item)
+      end
     end
   end
   if not user_cmp then
@@ -359,7 +366,7 @@ function M._lsp_to_complete_items(result, prefix, client_id)
       return (itema.sortText or itema.label) < (itemb.sortText or itemb.label)
     end)
   end
-  return candidates
+  return candidates, preselect_item
 end
 
 --- @param lnum integer 0-indexed
@@ -399,8 +406,10 @@ end
 --- @param server_start_boundary? integer 0-indexed word boundary, based on textEdit.range.start.character
 --- @param result vim.lsp.CompletionResult
 --- @param encoding 'utf-8'|'utf-16'|'utf-32'
+--- @param handle_preselect boolean
 --- @return table[] matches
 --- @return integer? server_start_boundary
+--- @return table? preselect_item
 function M._convert_results(
   line,
   lnum,
@@ -409,7 +418,8 @@ function M._convert_results(
   client_start_boundary,
   server_start_boundary,
   result,
-  encoding
+  encoding,
+  handle_preselect
 )
   -- Completion response items may be relative to a position different than `client_start_boundary`.
   -- Concrete example, with lua-language-server:
@@ -434,8 +444,9 @@ function M._convert_results(
     server_start_boundary = client_start_boundary
   end
   local prefix = line:sub((server_start_boundary or client_start_boundary) + 1, cursor_col)
-  local matches = M._lsp_to_complete_items(result, prefix, client_id)
-  return matches, server_start_boundary
+  local matches, preselect_item =
+    M._lsp_to_complete_items(result, prefix, client_id, handle_preselect)
+  return matches, server_start_boundary, preselect_item
 end
 
 -- NOTE: The reason we don't use `lsp.buf_request_all` here is because we want to filter the clients
@@ -516,6 +527,7 @@ local function trigger(bufnr, clients, ctx)
     local matches = {}
 
     local server_start_boundary --- @type integer?
+    local preselect_item --- @type table?
     for client_id, response in pairs(responses) do
       local client = lsp.get_client_by_id(client_id)
       if response.err then
@@ -532,7 +544,8 @@ local function trigger(bufnr, clients, ctx)
         Context.isIncomplete = Context.isIncomplete or result.isIncomplete
         local encoding = client and client.offset_encoding or 'utf-16'
         local client_matches
-        client_matches, server_start_boundary = M._convert_results(
+        local pitem
+        client_matches, server_start_boundary, pitem = M._convert_results(
           line,
           cursor_row - 1,
           cursor_col,
@@ -540,10 +553,15 @@ local function trigger(bufnr, clients, ctx)
           word_boundary,
           nil,
           result,
-          encoding
+          encoding,
+          not preselect_item
         )
 
         vim.list_extend(matches, client_matches)
+
+        if not preselect_item and pitem then
+          preselect_item = pitem
+        end
       end
     end
 
@@ -563,6 +581,9 @@ local function trigger(bufnr, clients, ctx)
     local user_cmp = vim.tbl_get(buf_handles, bufnr, 'cmp')
     if user_cmp then
       table.sort(matches, user_cmp)
+    end
+    if preselect_item then
+      table.insert(matches, 1, preselect_item)
     end
 
     local start_col = (server_start_boundary or word_boundary) + 1
@@ -726,6 +747,7 @@ end
 --- @field autotrigger? boolean  (default: false) When true, completion triggers automatically based on the server's `triggerCharacters`.
 --- @field convert? fun(item: lsp.CompletionItem): table Transforms an LSP CompletionItem to |complete-items|.
 --- @field cmp? fun(a: table, b: table): boolean Comparator for sorting merged completion items from all servers.
+--- @field preselect? boolean Whether to move item with `lsp.CompletionItem.preselect` to the top of the list. Defaults to true when 'completeopt' does not contain "noselect", false otherwise.
 
 ---@param client_id integer
 ---@param bufnr integer
@@ -733,7 +755,13 @@ end
 local function enable_completions(client_id, bufnr, opts)
   local buf_handle = buf_handles[bufnr]
   if not buf_handle then
-    buf_handle = { clients = {}, triggers = {}, convert = opts.convert, cmp = opts.cmp }
+    buf_handle = {
+      clients = {},
+      triggers = {},
+      convert = opts.convert,
+      cmp = opts.cmp,
+      preselect = opts.preselect or vim.o.completeopt:find('noselect') == nil,
+    }
     buf_handles[bufnr] = buf_handle
 
     -- Attach to buffer events.
